<resources>
    <string name="app_name" translatable="false">OnDuty</string>
    <string name="userName">User name </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="forgotUserName">Forgot user name?</string>
    <string name="home">Home</string>
    <string name="personal">Personal</string>
    <string name="myOffice">My office</string>
    <string name="general">General</string>
    <string name="departments">Departments</string>
    <string name="messages">Messages</string>
    <string name="action">ME/EV/TR/CO</string>
    <string name="contacts">Contacts</string>
    <string name="hrOffice">HR office</string>
    <string name="Id">ID:123456GSFGAVKCV</string>
    <string name="logout">Logout</string>
    <string name="emergencyCall">Emergency call</string>
    <string name="reports">Reports</string>
    <string name="meeting">Meetings</string>
    <string name="events">Events</string>
    <string name="trainings">Trainings</string>
    <string name="conference">Conferences</string>
    <string name="backIcons">&#xe905;</string>
    <string name="personal_card">Personal card</string>
    <string name="bussinessCard">Business card</string>
    <string name="leavesPh">Leaves. PH</string>
    <string name="roster">Roster</string>
    <string name="emegencyCellphone">Emergency phone</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="businessPhone">Business phone</string>
    <string name="businessEmail">Business Email</string>
    <string name="businessExtNum">Business Extension No.</string>
    <string name="designation">Designation:</string>
    <string name="basicSalary">Basic salary:</string>
    <string name="allowance">Allowance</string>
    <string name="housing">Housing:</string>
    <string name="transports">Transports:</string>
    <string name="telephone">Telephone:</string>
    <string name="serviceCharge">Service charge:</string>
    <string name="others">Others:</string>
    <string name="annualLeaves">Annual leaves</string>
    <string name="publicHolidays">Puplic holidays</string>
    <string name="due">Due</string>
    <string name="sickLeaves">Sick leave</string>
    <string name="pendingWeek">Pending weekly off</string>
    <string name="requestLeave">Request leave</string>
    <string name="requestedLeave">Requested leave</string>
    <string name="used">Used</string>
    <string name="remian">Remain</string>
    <string name="duty">Duty</string>
    <string name="change_password">Change password</string>
    <string name="currentPassword">Current password</string>
    <string name="newPassword">New password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="resumeToDuty">Resume to duty</string>
    <string name="total">Total</string>
    <string name="reasons">Reason...</string>
    <string name="submit">Submit</string>
    <string name="select_leave_type">Select leave type</string>
    <string name="pending">Pending</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="approvals">Approvals</string>
    <string name="manager">Manager</string>
    <string name="select_as_pref">Request as preference</string>
    <string name="approval_txt">This request is just a preference and still need approval</string>
    <string name="change">Change</string>
    <string name="officeOnDuty">Office on duty</string>
    <string name="officeDuty">Office duty</string>
    <string name="handovers">Handovers</string>
    <string name="briefing">Briefing</string>
    <string name="business">Business</string>
    <string name="message">Message</string>
    <string name="from">From:</string>
    <string name="department">Department:</string>
    <string name="to">To:</string>
    <string name="send">Send</string>
    <string name="followTask">Tasks to follow</string>
    <string name="createTask">Create a task</string>
    <string name="briefingToday">Briefing on today</string>
    <string name="createBriefing">Create briefing</string>
    <string name="company">Company</string>
    <string name="meetingRooms">Meeting rooms</string>
    <string name="resAndLounge">Restaurants&amp;Lounge</string>
    <string name="spa">SPA</string>
    <string name="recreationAndWater">Recreation&amp;Water sports</string>
    <string name="babySitter">Baby sitting</string>
    <string name="tennisCourt">Tennis court</string>
    <string name="romanticsDinner">Romantics Dinner/Rooms</string>
    <string name="transportations">Transportations</string>
    <string name="staffCanteen">Staff canteen Timing/Menu</string>
    <string name="staffMedical">Staff medical insurance</string>
    <string name="forms">Forms</string>
    <string name="rating">Rating</string>
    <string name="security">Security</string>
    <string name="companyDoc">Company doctor</string>
    <string name="companyNurse">Company nurse</string>
    <string name="firstAider">First aider</string>
    <string name="engineering">Engineering</string>
    <string name="managerOnDuty">Manager on duty</string>
    <string name="emergency">Emergency /Ambulance</string>
    <string name="manager_on_duty">Manager on duty report</string>
    <string name="incident_report">Incident report</string>


</resources>
